Fix blurry background for results and image in README

--- a/html/styles.css
+++ b/html/styles.css
@@ -228,7 +228,7 @@ a {
 /* Backgrounds */
 body, .loader-wrapper {
   background-image: url("images/bgd-brown-min.jpg");
-  background-size: cover;
+  background-size: contain;
 }
 
 .search-pg {
